keycloak/keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: security
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - iam.martens.live
      secretName: ckm-certificate-secret
  rules:
    - host: iam.martens.live
      http:
        paths:
          - backend:
              service:
                name: keycloak-http
                port:
                  number: 8443
            path: /
            pathType: ImplementationSpecific
